[gd_scene load_steps=6 format=3 uid="uid://l73bycey0pa7"]

[ext_resource type="Script" uid="uid://bvbasvhq7rhy2" path="res://scripts/audio_options.gd" id="1_luej2"]
[ext_resource type="FontFile" uid="uid://ck0hm2v3474rj" path="res://fonts/boldpixels/BoldPixels.ttf" id="2_vddeu"]
[ext_resource type="AudioStream" uid="uid://bfaxysfie3laa" path="res://sounds/ui/ui_main_button_back.wav" id="3_h8f1n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h8f1n"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luej2"]
bg_color = Color(0.472087, 0.786914, 0.879046, 1)

[node name="AudioOptions" type="CanvasLayer"]
script = ExtResource("1_luej2")

[node name="ColorPanel2" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h8f1n")

[node name="ColorPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.0
offset_top = 163.0
offset_right = 247.0
offset_bottom = 483.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_luej2")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 186.0
offset_right = 58.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vddeu")
theme_override_font_sizes/font_size = 24
text = "Audio options"

[node name="Master" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -43.0
offset_top = -67.0
offset_right = -43.0
offset_bottom = -67.0

[node name="Label" type="Label" parent="Master"]
layout_mode = 0
offset_left = 350.0
offset_top = 300.0
offset_right = 405.0
offset_bottom = 323.0
theme_override_fonts/font = ExtResource("2_vddeu")
theme_override_font_sizes/font_size = 24
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Master"]
layout_mode = 0
offset_left = 420.0
offset_top = 305.0
offset_right = 428.0
offset_bottom = 321.0
max_value = 3.0
step = 0.1

[node name="Music" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -43.0
offset_top = -67.0
offset_right = -43.0
offset_bottom = -67.0

[node name="Label" type="Label" parent="Music"]
layout_mode = 0
offset_left = 350.0
offset_top = 350.0
offset_right = 396.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("2_vddeu")
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Music"]
layout_mode = 0
offset_left = 420.0
offset_top = 355.0
offset_right = 428.0
offset_bottom = 371.0
max_value = 3.0
step = 0.1

[node name="SFX" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -43.0
offset_top = -67.0
offset_right = -43.0
offset_bottom = -67.0

[node name="Label" type="Label" parent="SFX"]
layout_mode = 0
offset_left = 350.0
offset_top = 400.0
offset_right = 390.0
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("2_vddeu")
theme_override_font_sizes/font_size = 24
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="SFX"]
layout_mode = 0
offset_left = 420.0
offset_top = 405.0
offset_right = 428.0
offset_bottom = 421.0
max_value = 3.0
step = 0.1

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 407.0
offset_top = 433.0
offset_right = 587.0
offset_bottom = 473.0

[node name="ApplyButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 52.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vddeu")
theme_override_font_sizes/font_size = 24
text = "Apply"

[node name="BackButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vddeu")
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="Buttons"]
stream = ExtResource("3_h8f1n")
